tests/snapshots/run_wpt_conformance__onnx_matmul_float32_5D_and_5D_tensors__broadcast_the_two_leftmost_dimensions_of_inputB.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "matmul.https.any.js",
    "matmul float32 5D and 5D tensors, broadcast the two leftmost dimensions of inputB",
    "onnx",
    "PASS",
)
